@@ -1369,6 +1369,7 @@ describe Daru::DataFrame do
 
   context "#shape" do
     it "returns an array containing number of rows and columns" do
+      expect(@data_frame.shape).to eq([5,3])
     end
   end
 end if mri?
